# golThreading

./: CMakeLists.txt  Makefile  README.md  cell.cpp  cell.h  main.cpp  map.cpp  map.h
src/: CMakeLists.txt  SDLstuff.cpp  SDLstuff.h  threadUtil.cpp  threadUtil.h  world.cpp  world.h
